# Paster

./: .env.example  .gitignore  .neutralbase  CLAUDE.md  MONOREPO_MIGRATION_PLAN.md  R2_SETUP_GUIDE.md  README.md  VIRTUAL-FILE-SYSTEM-IMPLEMENTATION.md  _env.example  convex.json  drizzle.config.ts  electron-builder-prod.yml  electron-builder.yml  neutral.schema.json  next.config.mjs  nodemon.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  s3-component.js  test-cli.sh  test-paste-formats.sh  test-shortcuts-flow.sh  test-shortcuts.sh  tsconfig.node.json  tsconfig.web.json  tsup.config.ts
.claude/: config.json  settings.local.json
agent-docs/: AIPASTE_FEATURE_AUDIT.md  CLI_UI_INTEGRATION_PLAN.md  COMPLETE_PROJECT_ROADMAP.md  CURRENT_ARCHITECTURE_2025.md  DOCUMENTATION_UPDATE_2025.md  FINAL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STRATEGY.md  KASH_INTEGRATION.md  KASH_INTEGRATION_COMPLETE.md  LAZY_LOADING_KASH.md  MASTER_PROGRESS_REPORT.md  PROJECT_OVERVIEW.md  PROJECT_PLAN.md  README.md  REPORT_CLIPBOARD_HISTORY_2025-01-12.md  REPORT_CONVEX_INTEGRATION_2025-08-18.md  REPORT_SWIFT_CLI_FOUNDATION_SESSION1.md  SWIFT_CLI_IMPLEMENTATION_PLAN.md  SWIFT_CLI_TECHNICAL_REPORT.md  TECHNICAL_PLAN.md  WORK_HOOKS_PROTOCOL.md
apps/live-app/pipecat-server/: bot.py  function_call.py  pyproject.toml  server.py
convex/: CONVEX_S3_PROGRESS.md  README.md  clipboardHistory.ts  conversionHistory.ts  fileGeneration.ts  fileVariants.ts  http.ts  s3Integration.ts  s3Test.ts  schema.ts  settings.ts  testConvexS3.ts  testVariants.ts
(+242 files in other folders)
