[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.11.0",
    "fastapi[all]>=0.116.1",
    "opencv-python>=4.11.0.86",
    "pipecat-ai-small-webrtc-prebuilt>=1.0.0",
    "pipecat-ai[google,silero,webrtc]>=0.0.82",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
